--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Streamdata Gallery Checkin
-url: checkin.streamdata.gallery
-tag: Checkin
+title: Streamdata Gallery Checkins
+url: checkins.streamdata.gallery
+tag: Checkins
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
 github_user: streamdata-gallery
-github_repo: checkin
+github_repo: checkins
 github_branch: master
 collections:
   listings:
